--- a/angular.json
+++ b/angular.json
@@ -30,7 +30,7 @@
             "styles": [
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [ "node_modules/@fortawesome/fontawesome-free/js/fontawesome.min.js"]
           },
           "configurations": {
             "production": {
